[gd_scene load_steps=26 format=2]

[ext_resource path="res://Sprites/Dudu.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Kai.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Characters.gd" type="Script" id=3]
[ext_resource path="res://Images/Play.png" type="Texture" id=4]
[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Images/Back.png" type="Texture" id=6]
[ext_resource path="res://Sounds/ButtonSound.mp3" type="AudioStream" id=7]
[ext_resource path="res://Images/SpeakerOff.png" type="Texture" id=8]
[ext_resource path="res://Images/SpeakerOn.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.45098, 0.113725, 0.847059, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.992157, 1, 0.988235, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.992157, 1, 0.988235, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.992157, 1, 0.988235, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.992157, 1, 0.988235, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.45098, 0.113725, 0.847059, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.992157, 1, 0.988235, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.992157, 1, 0.988235, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.992157, 1, 0.988235, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.992157, 1, 0.988235, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Characters" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 176.0
margin_bottom = 288.0
color = Color( 0.0980392, 0.109804, 0.192157, 1 )

[node name="DuduBtn" type="Button" parent="."]
margin_left = 14.0
margin_top = 106.0
margin_right = 82.0
margin_bottom = 207.0
rect_pivot_offset = Vector2( 395, 57 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="DuduBtn"]
position = Vector2( 34, 51 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3

[node name="KaiBtn" type="Button" parent="."]
margin_left = 94.0
margin_top = 106.0
margin_right = 162.0
margin_bottom = 207.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="KaiBtn"]
position = Vector2( 34, 50 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
hframes = 3
vframes = 3

[node name="Play" type="Sprite" parent="."]
visible = false
position = Vector2( 89, 213 )
scale = Vector2( 0.038, 0.038 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayBtn" type="Button" parent="Play"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -211.0
margin_top = -237.0
margin_right = 211.0
margin_bottom = 237.0

[node name="Back" type="Sprite" parent="."]
visible = false
position = Vector2( 13, 14 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 6 )
flip_h = true

[node name="BackBtn" type="Button" parent="Back"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -150.0
margin_top = -175.0
margin_right = 175.0
margin_bottom = 175.0

[node name="Label" type="Label" parent="."]
margin_left = 15.0
margin_top = 83.0
margin_right = 199.0
margin_bottom = 97.0
rect_scale = Vector2( 0.8, 1 )
custom_fonts/font = SubResource( 11 )
text = "Choose your character:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 9.0

[node name="ButtonSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="ButtonSound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="SpeakersButton" type="Button" parent="."]
margin_left = 152.0
margin_top = 6.0
margin_right = 170.0
margin_bottom = 21.0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="SpeakerOff" type="Sprite" parent="SpeakersButton"]
visible = false
position = Vector2( 9, 8 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 8 )

[node name="SpeakerOn" type="Sprite" parent="SpeakersButton"]
position = Vector2( 9, 8 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 9 )

[connection signal="mouse_entered" from="DuduBtn" to="." method="_on_DuduBtn_mouse_entered"]
[connection signal="pressed" from="DuduBtn" to="." method="_on_DuduBtn_pressed"]
[connection signal="mouse_entered" from="KaiBtn" to="." method="_on_KaiBtn_mouse_entered"]
[connection signal="pressed" from="KaiBtn" to="." method="_on_KaiBtn_pressed"]
[connection signal="mouse_entered" from="Play/PlayBtn" to="." method="_on_PlayBtn_mouse_entered"]
[connection signal="mouse_exited" from="Play/PlayBtn" to="." method="_on_PlayBtn_mouse_exited"]
[connection signal="pressed" from="Play/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="Back/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="mouse_entered" from="SpeakersButton" to="." method="_on_SpeakersButton_mouse_entered"]
[connection signal="pressed" from="SpeakersButton" to="." method="_on_SpeakersButton_pressed"]
